local path upade

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="header" id="head-title"></div>
       <div class="txt">
         <h2>
-          Save your favorite cat images to share with your cat-lover friends..
+          Save your favorite cat images to share with your cat-lover friends
         </h2>
       </div>
     </div>
@@ -23,7 +23,7 @@
     </div>
 
     <div class="btn-container">
-      <button class="btn">Let's Start!</button>
+      <button class="btn">Let's Start ss</button>
     </div>
 
 
