--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="btn-container">
-      <button class="btn">Let's Start ss</button>
+      <button class="btn">Let's Start</button>
     </div>
 
 
