spelling correction in contenet

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="header" id="head-title"></div>
       <div class="txt">
         <h2>
-          Save your favorite cat images to share with your cat-lover friends
+          Save your favorite cat images to share with your cat-lover friends.
         </h2>
       </div>
     </div>
